up to donate plan

--- a/index.html
+++ b/index.html
@@ -7,9 +7,81 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Now</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <section class="header-section">
+        <div class="header-div">
+            <h1>Let's help those </h1>
+            <h1>who are most <span> deserving !</span></h1>
+            <p>It may be little to you, but it might mean everything to someone in need. </p>
+            <p> A small donation can help save a life.</p>
+
+
+
+            <a href="" target="_blank">Donate now</a>
+        </div>
+    </section>
+
+    <section class="donate-now">
+        <div class="header-div">
+            <h1>Donate Now </h1>
+
+            <p>Whether you make a one-time gift or commit to a monthly payment, </p>
+            <p>we promise that the money you donate will be used to save a life.</p>
+
+
+            <div class="btn-group">
+                <button class="btn-donate">£100</button>
+                <button id="btn-two" class="btn-donate">£200</button>
+                <button class="btn-donate">£300</button>
+                <button class="btn-donate">£400</button>
+                <button class="btn-donate">£500</button>
+            </div>
+
+            <div id="other-amount">
+                <label for="other amount"> other amount (pound)</label>
+                <hr>
+
+            </div>
+
+            <div class="header-div">
+                <a href="" target="_blank">Donate now</a>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="donate-plan">
+        <div class="header-div">
+            <h1>Our Donate Plan</h1>
+            <p>Our donation plan is simple and effective </p>
+            <p>there is three way to make the donation</p>
+            <p> Food for a family,Shelter for a family , Education for a child</p>
+
+            <div class="three-donate-plan">
+                <div>
+                    <h3> Food for a family</h3>
+                </div>
+
+                <div>
+                    <h3>Shelter for a family</h3>
+                </div>
+
+                <div>
+                    <h3> Education for a child</h3>
+                </div>
+            </div>
+
+        </div>
+
+
+    </section>
+
 
 </body>
 
