--- a/index.html
+++ b/index.html
@@ -16,23 +16,22 @@
 
     <section class="header-section">
         <div class="header-div">
-            <h1>Let's help those </h1>
-            <h1>who are most <span> deserving !</span></h1>
-            <p>It may be little to you, but it might mean everything to someone in need. </p>
-            <p> A small donation can help save a life.</p>
-
-
-
+            <h1>Let's help those
+                <br> who are most <span> deserving !</span>
+            </h1>
+            <p>It may be little to you, but it might mean everything to someone in need. <br>
+                A small donation can help save a life.</p>
             <a href="" target="_blank">Donate now</a>
+
         </div>
     </section>
 
-    <section class="donate-now">
+    <section class="donate-now-section">
         <div class="header-div">
             <h1>Donate Now </h1>
 
-            <p>Whether you make a one-time gift or commit to a monthly payment, </p>
-            <p>we promise that the money you donate will be used to save a life.</p>
+            <p>Whether you make a one-time gift or commit to a monthly payment, <br>
+                we promise that the money you donate will be used to save a life.</p>
 
 
             <div class="btn-group">
@@ -44,9 +43,8 @@
             </div>
 
             <div id="other-amount">
-                <label for="other amount"> other amount (pound)</label>
+                <input type="text" placeholder="other amount (pound)">
                 <hr>
-
             </div>
 
             <div class="header-div">
@@ -56,24 +54,38 @@
         </div>
     </section>
 
-    <section class="donate-plan">
+    <section class="our-donate-plan-section">
         <div class="header-div">
             <h1>Our Donate Plan</h1>
-            <p>Our donation plan is simple and effective </p>
-            <p>there is three way to make the donation</p>
-            <p> Food for a family,Shelter for a family , Education for a child</p>
+            <p>Our donation plan is simple and effective.
+                There is three way to make the donation. <br>
+                which includes Food for a family, Shelter for a family , Education for a child.</p>
 
-            <div class="three-donate-plan">
-                <div>
-                    <h3> Food for a family</h3>
+            <div class="donate-plan">
+                <div class="card card1">
+                    <div class="card-desc">
+                        <img src="icons/food.png" alt="">
+                        <h3> Food for a family</h3>
+                        <p> You can donate instant, monthly or yearly food package for a family with just £200.this
+                            package will include
+                            groceary , madicine and so on </p>
+                    </div>
+
                 </div>
 
-                <div>
+                <div class="card card2">
+                    <img src="icons/shelter.png" alt="">
                     <h3>Shelter for a family</h3>
+                    <p>You can donate instant, monthly or yearly shelter package for a family with just £300.this
+                        package will include a
+                        house to live</p>
                 </div>
 
-                <div>
+                <div class="card card3">
+                    <img src="icons/Frame-1.png" alt="">
                     <h3> Education for a child</h3>
+                    <p>You can donate instant, monthly or yearly Education package for a child with just £500.this
+                        package will include their everyday cost of education</p>
                 </div>
             </div>
 
@@ -83,6 +95,48 @@
     </section>
 
 
+    <section class="happening-now">
+        <h3 id="fund-collection">Happening now....</h3>
+        <p>Find a cause in which you believe and work to make good things happen</p>
+        <div class="donate-plan">
+            <div class="card card4">
+
+                <h3>Tahura's life matter</h3>
+                <h4> Fund for building Tahura's house</h4>
+                <p> £2004 collected by 20 supporters still need £2000</p>
+            </div>
+
+            <div class="card card5">
+                <h3>Tahura's life matter</h3>
+                <h4> Fund for building Tahura's house</h4>
+                <p> £2004 collected by 20 supporters still need £2000</p>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="get-my-updates">
+
+        <h1>Get My Updates</h1>
+        <p>To get an update about you donation subscripe our page by entering your email address</p>
+
+        <div class="update-div">
+            <div>
+                <input type="email" name="email" id="email" placeholder="Email">
+            </div>
+
+            <div>
+                <input type="button" value="btn" placeholder="Subscribe">
+            </div>
+        </div>
+
+    </section>
+
+
 </body>
+<footer>
+    <h4> Let's give a hand </h4>
+    <p>together</p>
+</footer>
 
 </html>
