--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
     </section>
 
-    <section class="donate-now-section">
+
+    <section class="donate-now">
         <div class="header-div">
             <h1>Donate Now </h1>
-
             <p>Whether you make a one-time gift or commit to a monthly payment, <br>
                 we promise that the money you donate will be used to save a life.</p>
 
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <section class="our-donate-plan-section">
+    <section class="our-donate-plan">
         <div class="header-div">
             <h1>Our Donate Plan</h1>
             <p>Our donation plan is simple and effective.
@@ -96,20 +96,21 @@
 
 
     <section class="happening-now">
-        <h3 id="fund-collection">Happening now....</h3>
+        <h1 id="fund-collection">Happening now....</h1>
         <p>Find a cause in which you believe and work to make good things happen</p>
         <div class="donate-plan">
             <div class="card card4">
-
                 <h3>Tahura's life matter</h3>
                 <h4> Fund for building Tahura's house</h4>
                 <p> £2004 collected by 20 supporters still need £2000</p>
+                <img class="logo" src="icons/logo 2.png" alt="">
             </div>
 
             <div class="card card5">
                 <h3>Tahura's life matter</h3>
                 <h4> Fund for building Tahura's house</h4>
                 <p> £2004 collected by 20 supporters still need £2000</p>
+                <img class="logo" src="icons/logo 3.png" alt="">
             </div>
         </div>
 
@@ -118,7 +119,8 @@
     <section class="get-my-updates">
 
         <h1>Get My Updates</h1>
-        <p>To get an update about you donation subscripe our page by entering your email address</p>
+        <p>To get an update about you donation subscripe <br>
+            our page by entering your email address</p>
 
         <div class="update-div">
             <div>
@@ -126,7 +128,7 @@
             </div>
 
             <div>
-                <input type="button" value="btn" placeholder="Subscribe">
+                <input type="button" id="btn" value="Subscripe">
             </div>
         </div>
 
